(fix): paywall badge still setting margin if not visible

--- a/src/app/modules/discovery/discovery.component.scss
+++ b/src/app/modules/discovery/discovery.component.scss
@@ -29,9 +29,7 @@
       flex: 1;
     }
   }
-  m-paywallBadge .m-paywallBadge {
-    margin-right: 4px;
-  }
+
   h4 {
     padding: 0;
     margin: 0;
@@ -48,7 +46,7 @@
   .m-discoveryTrendListItem__supportingText--below {
     margin-top: $minds-margin;
   }
-  m-paywallBadge {
+  m-paywallBadge .m-paywallBadge {
     margin-right: 10px;
   }
   span {
